Tonando nossa pagina interativa

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                </div> 
 
                <div class="continue-button">
-                   <button><a href="#">Continuar</a></button>
+                   <button id="but"><a href="#">Continuar</a></button>
                </div>
 
             </form>
