--- a/index.html
+++ b/index.html
@@ -26,32 +26,32 @@
                 <div class="input-group">
                    <div class="input-box">
                        <label for="firstname">Primero nome</label> 
-                       <input id="firstname" type="text" class="text" name="firstname" placeholder="Nome" required>
+                       <input id="firstname" type="text" class="text hiden" name="firstname" placeholder="Nome" required>
                    </div> 
 
                    <div class="input-box">
                     <label for="lastname">Sobrenome</label> 
-                    <input id="lastname" type="text" class="text" name="lastname" placeholder="Sobrenome" required>
+                    <input id="lastname" type="text" class="text hiden" name="lastname" placeholder="Sobrenome" required>
                   </div> 
 
                   <div class="input-box">
                     <label for="email">Email</label> 
-                    <input id="email" type="email" class="text" name="email" placeholder="Digite seu email" required>
+                    <input id="email" type="email" class="text hiden" name="email" placeholder="Digite seu email" required>
                   </div> 
                   
                   <div class="input-box">
                     <label for="number">celular</label> 
-                    <input id="number" type="tel"  name="number" placeholder="(xx) xxxx-xxxx" required>
+                    <input id="number" type="tel"  name="number" placeholder="(xx) xxxx-xxxx" class="hiden" required>
                   </div> 
 
                   <div class="input-box">
                     <label for="password">senha</label> 
-                    <input id="password" type="password"  name="password" placeholder="Digite uma senha" required>
+                    <input id="password" type="password"  name="password" placeholder="Digite uma senha" class="hiden" required>
                   </div>
 
                   <div class="input-box">
                     <label for="password-confirmation">Confirme sua Senha</label> 
-                    <input id="password-confirmation" name="password-confirmation" placeholder="Confirme sua Senha" required>
+                    <input id="password-confirmation" type="password" name="password-confirmation" placeholder="Confirme sua Senha" class="hiden" required>
                   </div> 
 
                 </div>
@@ -62,33 +62,35 @@
                    </div>
                    <div class="gender-group">
                        <div class="gender-inp">
-                           <input type="radio" id="female" name="gender">
+                           <input type="radio" id="female" name="gender" checked>
                            <label for="famale">Feminino</label>
                        </div>
 
                        <div class="gender-inp">
-                        <input type="radio" id="male" name="gender">
+                        <input type="radio" id="male" name="gender" checked>
                         <label for="male">Masculino</label>
                     </div>
 
                     <div class="gender-inp">
-                        <input type="radio" id="others" name="gender">
+                        <input type="radio" id="others" name="gender" checked>
                         <label for="others">Outros</label>
                     </div>
 
                     <div class="gender-inp">
-                        <input type="radio" id="none" name="gender">
+                        <input type="radio" id="none" name="gender" checked>
                         <label for="none">Prefiro não dizer</label>
                     </div>
                    </div>
                </div> 
 
                <div class="continue-button">
-                   <button id="but"><a href="#">Continuar</a></button>
+                   <input type="button" value="Continuar" id="submit">
                </div>
 
             </form>
         </div>
     </div>
+
+    <script src="javascript/app.js"></script>
 </body>
 </html>
