Validação dos campos incompleta, function regex de validação de numero de telefone,com bug

--- a/index.html
+++ b/index.html
@@ -26,48 +26,45 @@
                 <div class="input-group">
                    <div class="input-box">
                        <label for="firstname">Primero nome</label> 
-                       <input id="firstname" type="text" class="text" name="firstname" placeholder="Nome" required>
+                       <input id="firstname" type="text" class="removi" name="firstname" placeholder="Nome" required>
+                       <i class="fa-solid fa-circle-exclamation hidden"></i>
+                       <i class="fa-solid fa-circle-check hidden"></i>
                    </div> 
 
                    <div class="input-box">
                     <label for="lastname">Sobrenome</label> 
-                    <input id="lastname" type="text" class="text " name="lastname" placeholder="Sobrenome" required>
-                    <i class="fa-solid fa-circle-exclamation"></i>
-                    <i class="fa-solid fa-circle-check"></i>
-                    <small>mensagem de erro</small>
+                    <input id="lastname" type="text" class="removi " name="lastname" placeholder="Sobrenome" required>
+                    <i class="fa-solid fa-circle-exclamation hidden"></i>
+                    <i class="fa-solid fa-circle-check hidden"></i>
                   </div> 
 
                   <div class="input-box">
                     <label for="email">Email</label> 
-                    <input id="email" type="email" class="text" name="email" placeholder="Digite seu email" required>
-                    <i class="fa-solid fa-circle-exclamation"></i>
-                    <i class="fa-solid fa-circle-check"></i>
-                    <small>mensagem de erro</small>
+                    <input id="email" type="email" class="removi" name="email" placeholder="Digite seu email" required>
+                    <i class="fa-solid fa-circle-exclamation hidden"></i>
+                    <i class="fa-solid fa-circle-check hidden"></i>
                   </div> 
                   
                   <div class="input-box">
                     <label for="number">celular</label> 
-                    <input id="number" type="tel"  name="number" placeholder="(xx) xxxx-xxxx" required>
-                    <i class="fa-solid fa-circle-exclamation"></i>
-                    <i class="fa-solid fa-circle-check"></i>
-                    <small>mensagem de erro</small>
+                    <input id="number" type="tel"  name="number" class="removi" placeholder="(xx) xxxx-xxxx" required>
+                    <i class="fa-solid fa-circle-exclamation hidden"></i>
+                    <i class="fa-solid fa-circle-check hidden"></i>
                   </div> 
 
                   <div class="input-box">
                     <label for="password">senha</label> 
-                    <input id="password" type="password"  name="password" placeholder="Digite uma senha" required>
-                    <i class="fa-solid fa-circle-exclamation" id="ico"></i>
-                    <i class="fa-solid fa-circle-check" id="ico"></i>
-                    <small>mensagem de erro</small>
+                    <input id="password" type="password"  name="password" class="removi" placeholder="Digite uma senha" required>
+                    <i class="fa-solid fa-circle-exclamation hidden"></i>
+                    <i class="fa-solid fa-circle-check hidden"></i>
                   </div>
 
                   <div class="input-box">
 
                     <label for="password-confirmation">Confirme sua Senha</label> 
-                    <input id="password-confirmation" type="password" name="password-confirmation" placeholder="Confirme sua Senha" required>
-                    <i class="fa-solid fa-circle-exclamation"></i>
-                    <i class="fa-solid fa-circle-check"></i>
-                    <small>mensagem de erro</small>
+                    <input id="password-confirmation" type="password" name="password-confirmation" class="removi" placeholder="Confirme sua Senha" required>
+                    <i class="fa-soli fa-circle-exclamationd hidden"></i>
+                    <i class="fa-solid fa-circle-check hidden"></i>
                   </div> 
 
                 </div>
