--- a/index.html
+++ b/index.html
@@ -24,47 +24,41 @@
                 </div>
 
                 <div class="input-group">
-                   <div class="input-box">
+                   <div class="input-box" id="input1">
                        <label for="firstname">Primero nome</label> 
                        <input id="firstname" type="text" class="removi" name="firstname" placeholder="Nome" required>
-                       <i class="fa-solid fa-circle-exclamation hidden"></i>
-                       <i class="fa-solid fa-circle-check hidden"></i>
+                       <small>Preencha o campo Obrigatorio</small>
                    </div> 
 
-                   <div class="input-box">
+                   <div class="input-box" id="input2">
                     <label for="lastname">Sobrenome</label> 
                     <input id="lastname" type="text" class="removi " name="lastname" placeholder="Sobrenome" required>
-                    <i class="fa-solid fa-circle-exclamation hidden"></i>
-                    <i class="fa-solid fa-circle-check hidden"></i>
+                    <small>Preencha o campo Obrigatorio</small>
                   </div> 
 
-                  <div class="input-box">
+                  <div class="input-box" id="input3">
                     <label for="email">Email</label> 
                     <input id="email" type="email" class="removi" name="email" placeholder="Digite seu email" required>
-                    <i class="fa-solid fa-circle-exclamation hidden"></i>
-                    <i class="fa-solid fa-circle-check hidden"></i>
+                    <small>Preencha o campo Obrigatorio</small>
                   </div> 
                   
-                  <div class="input-box">
+                  <div class="input-box" id="input4">
                     <label for="number">celular</label> 
                     <input id="number" type="tel"  name="number" class="removi" placeholder="(xx) xxxx-xxxx" required>
-                    <i class="fa-solid fa-circle-exclamation hidden"></i>
-                    <i class="fa-solid fa-circle-check hidden"></i>
+                    <small>Preencha o campo Obrigatorio</small>
                   </div> 
 
-                  <div class="input-box">
+                  <div class="input-box" id="input5">
                     <label for="password">senha</label> 
                     <input id="password" type="password"  name="password" class="removi" placeholder="Digite uma senha" required>
-                    <i class="fa-solid fa-circle-exclamation hidden"></i>
-                    <i class="fa-solid fa-circle-check hidden"></i>
+                    <small>Preencha o campo Obrigatorio</small>
                   </div>
 
-                  <div class="input-box">
+                  <div class="input-box" id="input6">
 
                     <label for="password-confirmation">Confirme sua Senha</label> 
                     <input id="password-confirmation" type="password" name="password-confirmation" class="removi" placeholder="Confirme sua Senha" required>
-                    <i class="fa-soli fa-circle-exclamationd hidden"></i>
-                    <i class="fa-solid fa-circle-check hidden"></i>
+                    <small>Preencha o campo Obrigatorio</small>
                   </div> 
 
                 </div>
