Refatorando codigo, e resolvendo bug em formulario

--- a/index.html
+++ b/index.html
@@ -24,40 +24,46 @@
                 </div>
 
                 <div class="input-group">
-                   <div class="input-box" id="input1">
+                   <div class="inputBox">
                        <label for="firstname">Primero nome</label> 
-                       <input id="firstname" type="text" class="removi" name="firstname" placeholder="Nome" required>
+                       <input id="firstname" type="text" class="removi 
+                        showErro" name="firstname" placeholder="Nome" required>
                        <small>Preencha o campo Obrigatorio</small>
                    </div> 
 
-                   <div class="input-box" id="input2">
+                   <div class="inputBox">
                     <label for="lastname">Sobrenome</label> 
-                    <input id="lastname" type="text" class="removi " name="lastname" placeholder="Sobrenome" required>
+                    <input id="lastname" type="text" class="removi 
+                        showErro" name="lastname" placeholder="Sobrenome" required>
                     <small>Preencha o campo Obrigatorio</small>
                   </div> 
 
-                  <div class="input-box" id="input3">
+                  <div class="inputBox">
                     <label for="email">Email</label> 
-                    <input id="email" type="email" class="removi" name="email" placeholder="Digite seu email" required>
+                    <input id="email" type="email" class="removi 
+                        showErro" name="email" placeholder="Digite seu email" required>
                     <small>Preencha o campo Obrigatorio</small>
                   </div> 
                   
-                  <div class="input-box" id="input4">
+                  <div class="inputBox">
                     <label for="number">celular</label> 
-                    <input id="number" type="tel"  name="number" class="removi" placeholder="(xx) xxxx-xxxx" required>
+                    <input id="number" type="tel"  name="number" class="removi 
+                        showErro" placeholder="(xx) xxxx-xxxx" required>
                     <small>Preencha o campo Obrigatorio</small>
                   </div> 
 
-                  <div class="input-box" id="input5">
+                  <div class="inputBox">
                     <label for="password">senha</label> 
-                    <input id="password" type="password"  name="password" class="removi" placeholder="Digite uma senha" required>
+                    <input id="password" type="password"  name="password" class="removi 
+                        showErro" placeholder="Digite uma senha" required>
                     <small>Preencha o campo Obrigatorio</small>
                   </div>
 
-                  <div class="input-box" id="input6">
+                  <div class="inputBox" id="input6">
 
                     <label for="password-confirmation">Confirme sua Senha</label> 
-                    <input id="password-confirmation" type="password" name="password-confirmation" class="removi" placeholder="Confirme sua Senha" required>
+                    <input id="password-confirmation" type="password" name="password-confirmation" class="removi 
+                        showErro" placeholder="Confirme sua Senha" required>
                     <small>Preencha o campo Obrigatorio</small>
                   </div> 
 
